# multi-language-bazel-monorepo

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package.json
.github/workflows/: main.yml
projects/calculator/: calculator_test.py
projects/go_hello_world/: BUILD.bazel  hello_world.go  hello_world_test.go
projects/go_web/: BUILD.bazel  main.go
projects/my_python-app/: main.py
projects/node_calculator/: BUILD.bazel  calculator.spec.js
projects/node_web/: BUILD.bazel  index.js
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
projects/python_calculator/: calculator_test.py
projects/python_web/: BUILD.bazel  main.py
